2005-02-16 Alain Magloire
	Fix for PR 85625, The IBinary info were not remove in the cache.
	* model/org/eclipse/cdt/internal/core/model/DeltaProcessor.java

2004-03-04 Peter Faltaous
	Add e_machine values for X86_64.
	getAttributes(): Add cases for X86_64.
	This fixes the debug configurations dialog which
	otherwise states that no debugger is available.

 	* utils/org/eclipse/cdt/utils/elf/Elf.java:
2005-02-16 Alain Magloire
	Fix PR 74034
	* utils/org/eclipse/cdt/utils/elf/Elf.java

2005-02-15 Alain Magloire
	Fix PR 82856
	* model/org/eclipse/cdt/core/model/IDeclaration.java
	* model/org/eclipse/cdt/core/model/IMacro.java
	* model/org/eclipse/cdt/core/model/IMember.java
	* model/org/eclipse/cdt/core/model/IMethod.java
	* model/org/eclipse/cdt/core/model/INamespace.java
	* model/org/eclipse/cdt/core/model/IStructure.java
	* model/org/eclipse/cdt/core/model/IVariable.java
	* model/org/eclipse/cdt/core/model/IVariableDeclaration.java

2005-02-14 Alain Magloire
	Part of 79596
	* model/org/eclipse/cdt/core/model/CoreModel.java
	* model/org/eclipse/cdt/core/model/IPathEntryContainerExtension.java
	* model/org/eclipse/cdt/core/model/IPathEntryContainerExtensionListener.java
	* model/org/eclipse/cdt/core/model/PathEntryContainerChanged.java
	* model/org/eclipse/cdt/internal/core/model/PathEntryManager.java

2005-02-10 Alain Magloire
	Second part of 79596
	* model/org/eclipse/cdt/core/model/IPathEntryContainerExtension.java
	* model/org/eclipse/cdt/core/model/IPathEntryContainerExtensionListener.java
	* model/org/eclipse/cdt/core/model/PathEntryContainerChanged.java
	* model/org/eclipse/cdt/internal/core/model/PathEntryManager.java

2005-02-10 Alain Magloire
	Part of the fix for 79596
	* model/org/eclipse/cdt/core/model/CoreModel.java
	* model/org/eclipse/cdt/core/model/IPathEntry.java
	* model/org/eclipse/cdt/core/model/IPathEntryContainerExtension.java
	* model/org/eclipse/cdt/internal/core/model/PathEntryManager.java